fix(Forms)-compact layout forms subtexts are not aligned

--- a/projects/angular/src/forms/styles/_range.clarity.scss
+++ b/projects/angular/src/forms/styles/_range.clarity.scss
@@ -35,6 +35,10 @@
       border-radius: forms-variables.$clr-forms-range-border-radius;
       border-style: none;
     }
+    .clr-validate-icon {
+      position: relative;
+      top: 8px;
+    }
   }
 
   .clr-range {
